2009-04-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	manual: fix trivial grammar errors.
	* doc/automake.texi (Subpackages, Vala Support, Java)
	(Checking the Distribution, Timeline): Fix `a' vs. `an' errors
	and duplicate `the'.
	Report by Eric Blake.

	Indent rule commands consistently with a TAB.
	* lib/am/check.am ($(TEST_SUITE_LOG)): Consistently use TAB, not
	spaces, for indentation of commands, even if indentation may not
	be needed at all.
	* lib/am/texinfos.am (install-info-am): Likewise.
	* THANKS: Update.
	Prompted by report from John Calcote.

	parallel-tests: fix recheck* targets for non-GNU make.
	* lib/am/check.am (recheck recheck-html): Override AM_MAKEFLAGS
	to portably transport the TEST_LOGS settings through the
	recursive `make' invocations.  Fixes parallel-tests9.test
	failure with Solaris make.
	* tests/parallel-tests9.test: Also ensure that the test
	summary is correct for `recheck'.
	Suggestion by Akim Demaille.

2009-04-22  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Avoid racy depmodes with universal builds.
	* m4/depend.m4 (_AM_DEPENDENCIES): If universal builds are used,
	avoid racy depmodes.
	* lib/depcomp: Ignore `-arch' argument for makedepend depmode.
	Report by Bruno Haible, analysis by Bruno Haible, Peter O'Gorman,
	and Eric Blake.

2009-04-21  Fabian Alenius  <fabian.alenius@gmail.com>  (tiny change)

	Fix link to autotools tutorial.
	* doc/automake.texi (Autotools Introduction): Fix broken link.
	* THANKS: Update.

2009-04-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	testsuite: minor w32 fixes.
	* tests/depend5.test: Don't fail if the system or file system
	cannot handle weird characters, instead just try a few.
	* tests/parallel-tests3.test: Really wait until the serial test
	has finished, before letting the cleanup trap do its work.
	Report by Bruno Haible.

	Avoid nonportable `./FILE' instead of `FILE' in test.
	* tests/libtool3.test: Do not use `$(top_builddir)/sub/libname.la'