@@ -1158,12 +1158,15 @@ sub define_verbose_var ($$)
     my ($name, $val) = @_;
     my $var = verbose_var ($name);
     my $pvar = verbose_private_var ($name);
+    my $silent_var = $pvar . '_0';
     if (option 'silent-rules')
       {
 	# Using `$V' instead of `$(V)' breaks IRIX make.
 	define_variable ($var, '$(' . $pvar . '_$(V))', INTERNAL);
 	define_variable ($pvar . '_', '$(' . $pvar . '_$(AM_DEFAULT_VERBOSITY))', INTERNAL);
-	define_variable ($pvar . '_0', $val, INTERNAL);
+	Automake::Variable::define ($silent_var, VAR_AUTOMAKE, '', TRUE, $val,
+				    '', INTERNAL, VAR_ASIS)
+	  if (! vardef ($silent_var, TRUE));
       }
 }
 
