@@ -66,7 +66,7 @@ cat stdout
 grep ' -c' stdout && Exit 1
 grep ' -o foo' stdout && Exit 1
 grep mv stdout && Exit 1
-grep 'CC .*foo\.' stdout
+grep 'CC    .*foo\.' stdout
 grep 'CC .*bar\.' stdout
 grep 'CC .*baz\.' stdout
 grep 'CC .*bla\.' stdout
