@@ -1,3 +1,12 @@
+2009-04-27  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	silent-rules: fix alignment of less verbose output.
+	* automake.in (define_verbose_var): Define `$silent_var' as
+	VAR_ASIS, not VAR_PRETTY, to avoid squashing of multiple
+	adjacent spaces.
+	* tests/silent.test: Amend test.
+	Report by Jan Engelhardt.
+
 2009-04-25  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	manual: fix trivial grammar errors.
